@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-10-17T01:57:21Z",
-  "count_outdated" : 274,
-  "uniques_outdated" : 240,
-  "count" : 278,
-  "uniques" : 244,
+  "timestamp" : "2025-11-06T00:44:37Z",
+  "count_outdated" : 278,
+  "uniques_outdated" : 244,
+  "count" : 282,
+  "uniques" : 248,
   "clones" : [
     {
-      "timestamp": "2025-10-07T00:00:00Z",
+      "timestamp": "2025-10-27T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
@@ -15,7 +15,7 @@
       "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2025-10-08T00:00:00Z",
+      "timestamp": "2025-10-28T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
@@ -24,22 +24,13 @@
       "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2025-10-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
-      "timestamp": "2025-10-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "timestamp": "2025-10-31T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
