@@ -3,24 +3,19 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2025-10-07T00:00:00Z",
+      "timestamp": "2025-10-27T00:00:00Z",
       "count": 1,
       "uniques": 1
     },
     {
-      "timestamp": "2025-10-08T00:00:00Z",
+      "timestamp": "2025-10-28T00:00:00Z",
       "count": 1,
       "uniques": 1
     },
     {
-      "timestamp": "2025-10-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-10-16T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "timestamp": "2025-10-31T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
