@@ -1,3 +1,12 @@
+2025-11-06T00:44:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19121003591 # 800
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-06
+* notice: last 14d: unq all: 4 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 240 274 / 244 278
+* notice: next accum: outdated-unq outdated-all / unq all: 244 278 / 248 282
+* notice: prev exec diff / last date diff / accum: unq all: +4 +4 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2025-10-07 2025-10-08 2025-10-10 2025-10-16] / [2025-10-27 2025-10-28 2025-10-31]
+
 2025-10-17T01:57:21Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18580035092 # 799
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-17
